Добавлено оформление модальных окон

--- a/catalog.html
+++ b/catalog.html
@@ -314,10 +314,13 @@
       </div>
     </footer>
     <section class="modal modal-cart">
+      <div class="feedback-top"></div>
       <h2><img src="img/modal-cart.png" alt="Успешно">
       Товар добавлен в корзину!</h2>
-      <a href="#">Оформить заказ</a>
-      <a href="#">Продолжить покупки</a>
+      <div class="modal-cart-buttons">
+        <a class="link btn-order" href="#">Оформить заказ</a>
+        <a class="link btn-continue" href="#">Продолжить покупки</a>
+      </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
   </body>
