--- a/catalog.html
+++ b/catalog.html
@@ -153,7 +153,7 @@
                   <span class="past-price">22500 Р.</span>
                   <span class="actual-price">15500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>              
                 </li>
@@ -165,7 +165,7 @@
                   <span class="past-price">30500 Р.</span>
                   <span class="actual-price">25500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -176,7 +176,7 @@
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -188,7 +188,7 @@
                   <span class="past-price">22500 Р.</span>
                   <span class="actual-price">15500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -200,7 +200,7 @@
                   <span class="past-price">30500 Р.</span>
                   <span class="actual-price">25500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -211,7 +211,7 @@
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -223,7 +223,7 @@
                   <span class="past-price">22500 Р.</span>
                   <span class="actual-price">15500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -235,7 +235,7 @@
                   <span class="past-price">30500 Р.</span>
                   <span class="actual-price">25500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -246,7 +246,7 @@
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
                   <div class="item-buttons visually-hidden">
-                    <a class="buy" href="#">Купить</a>
+                    <a class="buy buy-link" href="#">Купить</a>
                     <a class="bookmark-btn" href="#">В закладки</a>
                   </div>
                 </li>
@@ -323,5 +323,30 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script>
+      var buyLink = document.querySelector(".buy-link");
+
+      var buyPopup = document.querySelector(".modal-cart");
+
+      var buyClose = buyPopup.querySelector(".modal-close");
+        buyLink.addEventListener("click", function (evt) {
+          evt.preventDefault();
+          buyPopup.classList.add("modal-show");
+        });
+
+        buyClose.addEventListener("click", function (evt) {
+          evt.preventDefault();
+          buyPopup.classList.remove("modal-show");
+        });
+      
+      window.addEventListener("keydown", function (evt) {
+        evt.preventDefault();
+        if (evt.keyCode === 27) {
+          if (buyPopup.classList.contains("modal-show")) {
+            buyPopup.classList.remove("modal-show");
+          }
+        }
+      });
+    </script>
   </body>
 </html>
