--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
           <div class="about-contacts">
             <h3>Контакты</h3>
             <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
-            <a class="map" href="#"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
-            <a class="link" href="#">Заблудились? Напишите нам!</a>
+            <a class="map map-link" href="#"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
+            <a class="link feedback-link" href="#">Заблудились? Напишите нам!</a>
           </div>
         </section>
       </div>
@@ -334,5 +334,91 @@
       <h2 class="visually-hidden">Карта</h2>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
+    <script>
+      var link = document.querySelector(".feedback-link");
+
+      var popup = document.querySelector(".modal-feedback");
+
+      var close = popup.querySelector(".modal-close");
+
+      var form = popup.querySelector("form");
+
+      var login = popup.querySelector("[name=login]");
+
+      var email = popup.querySelector("[name=email]");
+
+      var isStorageSupport = true;
+      var storage = "";
+  
+      try {
+        storage = localStorage.getItem("login");
+      } catch (err) {
+        isStorageSupport = false;
+      }
+
+      link.addEventListener("click", function (evt) {
+        evt.preventDefault();
+        popup.classList.add("modal-show");
+
+        if (storage) {
+          login.value = storage;
+        }
+
+        login.focus();
+      });
+
+      close.addEventListener("click", function (evt) {
+        evt.preventDefault();
+        popup.classList.remove("modal-show");
+        popup.classList.remove("modal-error");
+      });
+
+      form.addEventListener("submit", function (evt) {
+        if (!login.value || !email.value) {
+          evt.preventDefault();
+          popup.classList.remove("modal-error");
+          popup.offsetWidth = popup.offsetWidth;
+          popup.classList.add("modal-error");
+          console.log("Нужно ввести имя и e-mail");
+        } else {
+          if (isStorageSupport) {
+            localStorage.setItem("login", login.value);
+          }
+        }
+      });
+
+      window.addEventListener("keydown", function (evt) {
+        if (evt.keyCode === 27) {
+        evt.preventDefault();
+          if (popup.classList.contains("modal-show")) {
+            popup.classList.remove("modal-show");
+            popup.classList.remove("modal-error");
+          }
+        }
+      });
+      var mapLink = document.querySelector(".map-link");
+
+      var mapPopup = document.querySelector(".modal-map");
+
+      var mapClose = mapPopup.querySelector(".modal-close");
+        mapLink.addEventListener("click", function (evt) {
+          evt.preventDefault();
+          mapPopup.classList.add("modal-show");
+        });
+
+        mapClose.addEventListener("click", function (evt) {
+          evt.preventDefault();
+          mapPopup.classList.remove("modal-show");
+        });
+      
+      window.addEventListener("keydown", function (evt) {
+        evt.preventDefault();
+        if (evt.keyCode === 27) {
+          if (mapPopup.classList.contains("modal-show")) {
+            mapPopup.classList.remove("modal-show");
+          }
+        }
+      });
+    </script>
   </body>
 </html>
