Исправления модальных окон

--- a/catalog.html
+++ b/catalog.html
@@ -324,30 +324,7 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
-    <script>
-      var buyLink = document.querySelector(".buy-link");
-
-      var buyPopup = document.querySelector(".modal-cart");
-
-      var buyClose = buyPopup.querySelector(".modal-close");
-        buyLink.addEventListener("click", function (evt) {
-          evt.preventDefault();
-          buyPopup.classList.add("modal-show");
-        });
-
-        buyClose.addEventListener("click", function (evt) {
-          evt.preventDefault();
-          buyPopup.classList.remove("modal-show");
-        });
-      
-      window.addEventListener("keydown", function (evt) {
-        evt.preventDefault();
-        if (evt.keyCode === 27) {
-          if (buyPopup.classList.contains("modal-show")) {
-            buyPopup.classList.remove("modal-show");
-          }
-        }
-      });
+    <script src="js/script.js">
     </script>
   </body>
 </html>
