--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               <span class="past-price">32500 Р.</span>
               <span class="actual-price">25500 Р.</span>
               <div class="item-buttons">
-                <a class="buy" href="#">Купить</a>
+                <a class="buy buy-link" href="#">Купить</a>
                 <a class="bookmark-btn" href="#">В закладки</a>
               </div>
             </li>
@@ -138,7 +138,7 @@
               <span class="past-price">22500 Р.</span>
               <span class="actual-price">15500 Р.</span>
               <div class="item-buttons">
-                <a class="buy" href="#">Купить</a>
+                <a class="buy buy-link" href="#">Купить</a>
                 <a class="bookmark-btn" href="#">В закладки</a>
               </div>
             </li>    
@@ -150,7 +150,7 @@
               <span class="past-price">30500 Р.</span>
               <span class="actual-price">25500 Р.</span>
               <div class="item-buttons">
-                <a class="buy" href="#">Купить</a>
+                <a class="buy buy-link" href="#">Купить</a>
                 <a class="bookmark-btn" href="#">В закладки</a>
               </div>
             </li>   
@@ -161,7 +161,7 @@
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="actual-price">12500 Р.</span>
               <div class="item-buttons">
-                <a class="buy" href="#">Купить</a>
+                <a class="buy buy-link" href="#">Купить</a>
                 <a class="bookmark-btn" href="#">В закладки</a>
               </div>
             </li>
@@ -334,91 +334,17 @@
       <h2 class="visually-hidden">Карта</h2>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
-    <script>
-      var link = document.querySelector(".feedback-link");
-
-      var popup = document.querySelector(".modal-feedback");
-
-      var close = popup.querySelector(".modal-close");
-
-      var form = popup.querySelector("form");
-
-      var login = popup.querySelector("[name=login]");
-
-      var email = popup.querySelector("[name=email]");
-
-      var isStorageSupport = true;
-      var storage = "";
-  
-      try {
-        storage = localStorage.getItem("login");
-      } catch (err) {
-        isStorageSupport = false;
-      }
-
-      link.addEventListener("click", function (evt) {
-        evt.preventDefault();
-        popup.classList.add("modal-show");
-
-        if (storage) {
-          login.value = storage;
-        }
-
-        login.focus();
-      });
-
-      close.addEventListener("click", function (evt) {
-        evt.preventDefault();
-        popup.classList.remove("modal-show");
-        popup.classList.remove("modal-error");
-      });
-
-      form.addEventListener("submit", function (evt) {
-        if (!login.value || !email.value) {
-          evt.preventDefault();
-          popup.classList.remove("modal-error");
-          popup.offsetWidth = popup.offsetWidth;
-          popup.classList.add("modal-error");
-          console.log("Нужно ввести имя и e-mail");
-        } else {
-          if (isStorageSupport) {
-            localStorage.setItem("login", login.value);
-          }
-        }
-      });
-
-      window.addEventListener("keydown", function (evt) {
-        if (evt.keyCode === 27) {
-        evt.preventDefault();
-          if (popup.classList.contains("modal-show")) {
-            popup.classList.remove("modal-show");
-            popup.classList.remove("modal-error");
-          }
-        }
-      });
-      var mapLink = document.querySelector(".map-link");
-
-      var mapPopup = document.querySelector(".modal-map");
-
-      var mapClose = mapPopup.querySelector(".modal-close");
-        mapLink.addEventListener("click", function (evt) {
-          evt.preventDefault();
-          mapPopup.classList.add("modal-show");
-        });
-
-        mapClose.addEventListener("click", function (evt) {
-          evt.preventDefault();
-          mapPopup.classList.remove("modal-show");
-        });
-      
-      window.addEventListener("keydown", function (evt) {
-        evt.preventDefault();
-        if (evt.keyCode === 27) {
-          if (mapPopup.classList.contains("modal-show")) {
-            mapPopup.classList.remove("modal-show");
-          }
-        }
-      });
+    <section class="modal modal-cart">
+      <div class="feedback-top"></div>
+      <h2><img src="img/modal-cart.png" alt="Успешно">
+      Товар добавлен в корзину!</h2>
+      <div class="modal-cart-buttons">
+        <a class="link btn-order" href="#">Оформить заказ</a>
+        <a class="link btn-continue" href="#">Продолжить покупки</a>
+      </div>
+      <button class="modal-close" type="button">Закрыть</button>
+    </section>
+    <script src="js/script.js">
     </script>
   </body>
 </html>
