Добавлены изменения (кнопки, модальные окна)

--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
                       <div class="toggle toggle-max"></div>
                     </div>
                     <div class="price-controls">
-                      <label class="min-price"><input name="min-price" type="text" value="0">  -</label>
+                      <label class="min-price"><input name="min-price" type="text" value="0"></label>
                       <label class="max-price"><input name="max-price" type="text" value="30000"></label>
                     </div>
                   </div>  
@@ -140,8 +140,8 @@
                 <li><a href="#">По цене</a></li>
                 <li><a href="#">По типу</a></li>
                 <li><a href="#">По функционалу</a></li>
-                <li><div class="icon-up"><a href="#">По возрастающей</a></div></li>
-                <li><div class="icon-down"><a href="#">По убывающей</a></div></li>
+                <li><div class="icon-up"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" alt="По возрастающей"><path class="up-path" fill="#231F20" d="M5.5 0L0 10h11z"/></svg></a></div></li>
+                <li><div class="icon-down"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" alt="По убывающей"><path class="down-path" fill="#231F20" d="M5.5 10L0 0h11"/></svg></a></div></li>
               </ul>
             </div>
             <div class="catalog-items">
