--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
           <div class="about-contacts">
             <h3>Контакты</h3>
             <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
-            <a class="map map-link" href="#"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
-            <a class="link feedback-link" href="#">Заблудились? Напишите нам!</a>
+            <a class="map map-link" href="https://echo.htmlacademy.ru"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
+            <a class="link feedback-link" href="https://echo.htmlacademy.ru">Заблудились? Напишите нам!</a>
           </div>
         </section>
       </div>
