Изменения, добавлены минификации

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Каталог Техномарта</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style-min.css">
   </head>
   <body>
   	<header class="main-header">
@@ -140,15 +140,15 @@
                 <li><a href="#">По цене</a></li>
                 <li><a href="#">По типу</a></li>
                 <li><a href="#">По функционалу</a></li>
-                <li><div class="icon-up"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" alt="По возрастающей"><path class="up-path" fill="#231F20" d="M5.5 0L0 10h11z"/></svg></a></div></li>
-                <li><div class="icon-down"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" alt="По убывающей"><path class="down-path" fill="#231F20" d="M5.5 10L0 0h11"/></svg></a></div></li>
+                <li><div class="icon-up"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path class="up-path" fill="#231F20" d="M5.5 0L0 10h11z"/></svg></a></div></li>
+                <li><div class="icon-down"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path class="down-path" fill="#231F20" d="M5.5 10L0 0h11"/></svg></a></div></li>
               </ul>
             </div>
             <div class="catalog-items">
               <ul>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
                   </div>
                   <h3>Перфоратор BOSCH BFG 3000</h3>
                   <span class="past-price">22500 Р.</span>
@@ -160,7 +160,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
                   </div>
                   <h3>Перфоратор BOSCH BFG 6000</h3>
                   <span class="past-price">30500 Р.</span>
@@ -172,7 +172,7 @@
                 </li>
                 <li class="new">
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
                   </div>
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
@@ -183,7 +183,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
                   </div>
                   <h3>Перфоратор BOSCH BFG 3000</h3>
                   <span class="past-price">22500 Р.</span>
@@ -195,7 +195,7 @@
                 </li>
                 <li class="new">
                   <div class="item-img">
-                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
                   </div>
                   <h3>Перфоратор BOSCH BFG 6000</h3>
                   <span class="past-price">30500 Р.</span>
@@ -207,7 +207,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
                   </div>
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
@@ -218,7 +218,7 @@
                 </li>
                 <li class="new">
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
                   </div>
                   <h3>Перфоратор BOSCH BFG 3000</h3>
                   <span class="past-price">22500 Р.</span>
@@ -230,7 +230,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
                   </div>
                   <h3>Перфоратор BOSCH BFG 6000</h3>
                   <span class="past-price">30500 Р.</span>
@@ -242,7 +242,7 @@
                 </li>
                 <li>
                   <div class="item-img">
-                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+                    <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
                   </div>
                   <h3 class="one-price">Перфоратор BOSCH BFG 2000</h3>
                   <span class="actual-price">12500 Р.</span>
@@ -316,7 +316,7 @@
     </footer>
     <section class="modal modal-cart">
       <div class="feedback-top"></div>
-      <h2><img src="img/modal-cart.png" alt="Успешно">
+      <h2><img src="img/modal-cart.png" alt="Успешно" width="66" height="66">
       Товар добавлен в корзину!</h2>
       <div class="modal-cart-buttons">
         <a class="link btn-order" href="#">Оформить заказ</a>
@@ -324,7 +324,7 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
-    <script src="js/script.js">
+    <script src="js/script-min.js">
     </script>
   </body>
 </html>
