--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style-min.css">
   </head>
   <body>
     <header class="main-header">
@@ -15,7 +15,7 @@
           <form class="search-form" action="https://echo.htmlacademy.ru">
             <label class="visually-hidden" for="search">Поиск по сайту</label>
             <input type="search" name="search" id="search" placeholder="Поиск:">
-            <input type="submit" value="Найти"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" alt="Искать"><path class="search-submit" fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/></svg>
+            <input type="submit" value="Найти">
           </form>
           <div class="bookmark">
             <a href="#">Закладки: 0</a>
@@ -120,7 +120,7 @@
           <ul>
             <li>
               <div class="item-img">
-              <img src="img/popular-1.jpg" alt="Фото перфоратора">
+              <img src="img/popular-1.jpg" alt="Фото перфоратора" width="146" height="86">
               </div>
               <h3>Перфоратор BOSCH BFG 9000</h3>
               <span class="past-price">32500 Р.</span>
@@ -132,7 +132,7 @@
             </li>
             <li>
               <div class="item-img">
-              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="185" height="84">
               </div>
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="past-price">22500 Р.</span>
@@ -144,7 +144,7 @@
             </li>    
             <li>
               <div class="item-img">
-              <img src="img/catalog-item-2.jpg" alt="Фото перфоратора">
+              <img src="img/catalog-item-2.jpg" alt="Фото перфоратора" width="146" height="86">
               </div>
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="past-price">30500 Р.</span>
@@ -156,7 +156,7 @@
             </li>   
             <li class="new-drill new">
               <div class="item-img">
-              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора">
+              <img src="img/catalog-item-1.jpg" alt="Фото перфоратора" width="129" height="92">
               </div>
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="actual-price">12500 Р.</span>
@@ -174,28 +174,28 @@
           </div>
           <ul class="brands-list">
             <li>
-              <a href="#"><img src="img/bosch.jpg" alt="Bosch"></a>
+              <a href="#"><img src="img/bosch.jpg" alt="Bosch" width="126" height="37"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/makita.jpg" alt="Makita"></a>
+              <a href="#"><img src="img/makita.jpg" alt="Makita" width="123" height="40"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/dewalt.jpg" alt="DeWALT"></a>
+              <a href="#"><img src="img/dewalt.jpg" alt="DeWALT" width="146" height="44"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/interskol.jpg" alt="Интерскол"></a>
+              <a href="#"><img src="img/interskol.jpg" alt="Интерскол" width="178" height="28"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/hitachi.jpg" alt="Hitachi"></a>
+              <a href="#"><img src="img/hitachi.jpg" alt="Hitachi" width="146" height="22"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/lg.jpg" alt="LG"></a>
+              <a href="#"><img src="img/lg.jpg" alt="LG" width="121" height="73"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions"></a>
+              <a href="#"><img src="img/aeg.jpg" alt="AEG Power Solutions" width="151" height="96"></a>
             </li>
             <li>            
-              <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play."></a>
+              <a href="#"><img src="img/metabo.jpg" alt="Metabo work. don't play." width="158" height="59"></a>
             </li>
           </ul>
         </section>
@@ -256,7 +256,7 @@
           <div class="about-contacts">
             <h3>Контакты</h3>
             <p>Вы можете забрать товар сами, заехав в наш офис:</p>          
-            <a class="map map-link" href="https://echo.htmlacademy.ru"><img src="img/map.jpg" alt="Посмотреть наше местоположение"></a>          
+            <a class="map map-link" href="https://echo.htmlacademy.ru"><img src="img/map.jpg" alt="Посмотреть наше местоположение" width="300" height="158"></a>          
             <a class="link feedback-link" href="https://echo.htmlacademy.ru">Заблудились? Напишите нам!</a>
           </div>
         </section>
@@ -336,7 +336,7 @@
     </section>
     <section class="modal modal-cart">
       <div class="feedback-top"></div>
-      <h2><img src="img/modal-cart.png" alt="Успешно">
+      <h2><img src="img/modal-cart.png" alt="Успешно" width="66" height="66">
       Товар добавлен в корзину!</h2>
       <div class="modal-cart-buttons">
         <a class="link btn-order" href="#">Оформить заказ</a>
@@ -344,7 +344,7 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
-    <script src="js/script.js">
+    <script src="js/script-min.js">
     </script>
   </body>
 </html>
