--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Техномарт</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style-min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
   <body>
     <header class="main-header">
@@ -344,7 +344,7 @@
       </div>
       <button class="modal-close" type="button">Закрыть</button>
     </section>
-    <script src="js/script-min.js">
+    <script src="js/script.min.js">
     </script>
   </body>
 </html>
