--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог Техномарта</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i|PT+Sans|PT+Sans+Narrow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,700i|PT+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
